# ncdf_pi

./: CMakeLists.txt  README  gui.fbp
Extras/: ibi_example.nc
cmake/: PluginConfigure.cmake  PluginPackage.cmake
manual/: antora.yml  site.yml
manual/modules/ROOT/pages/: index.adoc
src/: Array2D.cpp  Array2D.h  IsoLine2.cpp  IsoLine2.h  folder.xpm  gui.cpp  gui.h  icons2.cpp  icons2.h  ncdf.cpp  ncdf.h  ncdf_pi.cpp  ncdf_pi.h  ncdf_reader.cpp  ncdf_reader.h  ncdfdata.cpp  ncdfdata.h  ncdfoverlayfactory.cpp  ncdfoverlayfactory.h
